2023-03-29 - Création de la page d'acceuil et de la page Link

--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tamagochlink</title>
+    <title>The Legend Of Zeldamagochi</title>
+    <link rel="stylesheet" href="styles/style.scss">
 </head>
+
 <body>
-    
+    <div class="display">
+        <div id="ciel" class="background_vh wrapper_accueil">
+            <img class="logo_zelda" src="./assets/zelda_logo.svg" alt="Logo du jeux The Legend Of Zelda">
+            <div class="background_grey">
+                <p> Enter your name :</p>
+                <form>
+                    <label for="pseudo"></label>
+                    <input type="text" id="pseudo" name="pseudo" required>
+                </form>
+            </div>
+        </div>
+        <div id="feuille" class="background_vh  wrapper_accueil">
+            <a href="">
+                <img src="./assets/link/link.png" alt="Link de The Legend Of Zelda">
+            </a>
+            <a href="">
+                <img class="zelda_taille" src="./assets/zelda/zelda.png" alt="Zelda de The Legend Of Zelda">
+            </a>
+        </div>
+    </div>
+    <div>
+        <div id="ciel" class="background_vh wrapper_jeux">
+            <img src="./assets/link/link_gauche.png" alt="Link de The Legend Of Zelda">
+        </div>
+        <div id="feuille" class="background_vh">
+            <div>
+                <a href="">
+                    <img src="./assets/bouton/button_coeur.png">
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="./assets/bouton/button_pièce.png">
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="./assets/bouton/button_potion.png">
+                </a>
+            </div>
+        </div>
+        
+
 </body>
-</html>l
+<script src="typescript/script.ts"></script>
+
+</html>
