--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Accueil-->
-    <div id="jeux_start"class="display">
+    <div id="jeux_start" class="display">
         <div class="ciel background_vh wrapper_accueil">
             <img class="logo_zelda" src="./assets/zelda_logo.svg" alt="Logo du jeux The Legend Of Zelda">
             <div class="background_grey">
@@ -47,7 +47,7 @@
         </div>
         <div class="feuille background_vh wrapper_image">
             <div class="image-container">
-                <button>
+                <button id="upvie_link">
                     <img src="./assets/bouton/button_coeur.png">
                 </button>
                 <div class="progress_bar">
@@ -56,7 +56,7 @@
                 <div id="barre_progression_coeur_link"></div>
             </div>
             <div class="image-container">
-                <button>
+                <button id="uppiece_link">
                     <img src="./assets/bouton/button_pièce.png">
 
                 </button>
@@ -66,7 +66,7 @@
                 <div id="barre_progression_pièce_link"></div>
             </div>
             <div class="image-container">
-                <button>
+                <button id="uppotion_link">
                     <img src="./assets/bouton/button_potion.png">
                 </button>
                 <div class="progress_bar">
@@ -85,7 +85,7 @@
         </div>
         <div class="feuille background_vh wrapper_image">
             <div class="image-container">
-                <button>
+                <button id="upvie_zelda">
                     <img src="./assets/bouton/button_coeur.png">
                 </button>
                 <div class="progress_bar">
@@ -93,13 +93,17 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="./assets/bouton/button_pièce.png">
+                <button id="uppiece_zelda">
+                    <img src="./assets/bouton/button_pièce.png">
+                </button>
                 <div class="progress_bar">
                     <div class="progress"></div>
                 </div>
             </div>
             <div class="image-container">
-                <img src="./assets/bouton/button_étoile.png">
+                <button id="upetoile_zelda">
+                    <img src="./assets/bouton/button_étoile.png">
+                </button>
                 <div class="progress_bar">
                     <div class="progress"></div>
                 </div>
