--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
                 <button class="button display_none" id="lancer">Commencer</button>
             </div>
         </div>
-
-        <!-- Page Jeux Link-->
     </div>
+    <!-- Page Jeux Link-->
     <div id="jeux_link" class="display_none">
         <div class="ciel background_vh wrapper_jeux">
             <img src="./assets/link/link_gauche.png" alt="Link de The Legend Of Zelda">
@@ -89,7 +88,7 @@
                     <img src="./assets/bouton/button_coeur.png">
                 </button>
                 <div class="progress_bar">
-                    <div id="barre-vie" class="progress"></div>
+                    <div id="barre_vie_zelda" class="progress"></div>
                 </div>
             </div>
             <div class="image-container">
@@ -97,7 +96,7 @@
                     <img src="./assets/bouton/button_pièce.png">
                 </button>
                 <div class="progress_bar">
-                    <div class="progress"></div>
+                    <div id="barre_piece_zelda" class="progress"></div>
                 </div>
             </div>
             <div class="image-container">
