2023-04-07 - TypeScript fini/ Barres progessions fonctionnels

--- a/index.html
+++ b/index.html
@@ -50,17 +50,16 @@
                     <img src="./assets/bouton/button_coeur.png">
                 </button>
                 <div class="progress_bar">
-                    <div class="progress"></div>
+                    <div id="barre_vie_link" class="progress"></div>
                 </div>
                 <div id="barre_progression_coeur_link"></div>
             </div>
             <div class="image-container">
                 <button id="uppiece_link">
                     <img src="./assets/bouton/button_pièce.png">
-
                 </button>
                 <div class="progress_bar">
-                    <div class="progress"></div>
+                    <div id="barre_piece_link" class="progress"></div>
                 </div>
                 <div id="barre_progression_pièce_link"></div>
             </div>
@@ -69,7 +68,7 @@
                     <img src="./assets/bouton/button_potion.png">
                 </button>
                 <div class="progress_bar">
-                    <div class="progress"></div>
+                    <div id="barre_potion_link" class="progress"></div>
                 </div>
                 <div id="barre_progression_potion_link"></div>
             </div>
@@ -100,11 +99,11 @@
                 </div>
             </div>
             <div class="image-container">
-                <button id="upetoile_zelda">
+                <button id="upétoile_zelda">
                     <img src="./assets/bouton/button_étoile.png">
                 </button>
                 <div class="progress_bar">
-                    <div class="progress"></div>
+                    <div id="barre_étoile_zelda" class="progress"></div>
                 </div>
             </div>
         </div>
@@ -115,10 +114,9 @@
         <div class="ciel background_vh skull_wrapper">
             <img class="skull" src="./assets/skull.png">
         </div>
-        <div class="feuille background_vh">
-            <div class="texte">Oh non ! est mort !
-                <button class="button" id="recommencer">Recommencer</button>
-            </div>
+        <div class="feuille background_vh column">
+            <div id="divlose" class="texte"> </div>
+            <button class="button" id="recommencer">Recommencer</button> 
         </div>
     </div>
 
